# opencmw-concepts

./: .gitignore  CMakeLists.txt
cmake/: Conan.cmake
concepts/: CMakeLists.txt
concepts/refl_cpp/: CMakeLists.txt  refl_cpp_annotations.cpp
concepts/rttr/: rttr_test.cpp
concepts/tinyrefl/: CMakeLists.txt  tinyrefl_test.cpp  tinyrefl_test.hpp
